--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -1,117 +1,78 @@
-
-
-
-body{
-	height: 100vh;
-	width: 100%;
+.container {
+    width: 100%;
+    margin: auto;
+    background-color:rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: -5px 5px 0px 1px rgba(0, 0, 0, 0.250);
+    box-shadow: -5px 5px 0px 3px rgba(0, 0, 0, 0.250);
 }
-
-.container{
-	position: relative;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	padding: 20px 100px;
+.container h1 {
+    text-align: center;
+    margin: 30px 0;
 }
-
-.container:after{
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	left: 0;
-	top: 0;
-	background-color: #fff;
-	background-size: cover;
-	filter: blur(50px);
-	z-index: -1;
+.form {
+    display: flex;
+    flex-direction: column;
 }
-.contact-box{
-	max-width: 850px;
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	background-color: #fff;
-	box-shadow: 0px 0px 19px 5px rgba(0,0,0,0.19);
+.name {
+    margin: 25px auto;
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    width: 90%;
+    height: 40px;
 }
-
-.left{
-	background-color:dimgrey ;
-	background-size: cover;
-	height: 100%;
+.name input[type="text"] {
+    width: 40%;
+    margin: 0 20px 0 0;
+    padding: 15px;
+    font-style: italic;
+    border: 2px solid #434753;
+    background: transparent;
+    color: #434753;
+    outline-color: #979492;
 }
-
-.right{
-	padding: 25px 40px;
-}
-
-h2{
-	position: relative;
-	padding: 0 0 10px;
-	margin-bottom: 10px;
-}
-
-h2:after{
-	content: '';
+.name label[for="firstName"] {
     position: absolute;
-    left: 50%;
-    bottom: 0;
-    transform: translateX(-50%);
-    height: 4px;
-    width: 50px;
-    border-radius: 2px;
-    background-color: #cc6d2e;
+    top: -30px;
+    left: 0;
 }
-
-.field{
-	width: 100%;
-	border: 2px solid rgba(0, 0, 0, 0);
-	outline: none;
-	background-color: rgba(230, 230, 230, 0.6);
-	padding: 0.5rem 1rem;
-	font-size: 1.1rem;
-	margin-bottom: 22px;
-	transition: .3s;
+.name label[for="lastName"] {
+    position: absolute;
+    top: -30px;
+    right: 190px;
 }
-
-.field:hover{
-	background-color: rgba(0, 0, 0, 0.1);
+.email {
+    width: 50%;
+    margin: 0 0 20px 35px;
+    height: 40px;
+    padding: 15px;
+    font-style: italic;
+    border: 2px solid #434753;
+    background: transparent;
+    color: #434753;
+    outline-color: #f0843c;
 }
-
-textarea{
-	min-height: 150px;
+label:not(#nameLabel) {
+    margin-left: 35px;
+    margin-bottom: 10px;
 }
-
-.btn{
-	width: 100%;
-	padding: 0.5rem 1rem;
-	background-color: #cc6d2e;
-	color: #fff;
-	font-size: 1.1rem;
-	border: none;
-	outline: none;
-	cursor: pointer;
-	transition: .3s;
+.message {
+    width: 80%;
+    margin: 0 35px;
+    height: 100px;
+    padding: 15px;
+    font-style: italic;
+    border: 2px solid #434753;
+    background: transparent;
+    color: #434753;
+    outline-color: #ffd6ba;
 }
-
-.btn:hover{
-    background-color:#cc6d2e;
-}
-
-.field:focus{
-    border: 2px solid rgba(30,85,250,0.47);
-    background-color: #fff;
-}
-
-@media screen and (max-width: 880px){
-	.contact-box{
-		grid-template-columns: 1fr;
-	}
-	.left{
-		height: 200px;
-	}
+.send {
+    width: 100px;
+    margin: 30px 35px;
+    height: 40px;
+    border: none;
+    background: #434753;
+    color: #ffd6ba;
+    cursor: pointer;
 }
